# zarr-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: macos-test.yml  ubuntu-test.yml  windows-test.yml
cmake/: Config.cmake.in  Doxygen.cmake
docs/: Doxyfile.in  overview.md
include/zarr/: directory_store.hpp  errors.hpp  metadata.hpp  store.hpp  vec2.hpp  vector2.hpp  zarr.hpp  zarr_array.hpp
script/: generate_fixtures.py
scripts/: gendocs.sh  install.sh
src/: CMakeLists.txt  file_system.cpp  file_system.hpp  math.cpp  math.hpp  metadata.cpp  names.hpp  store.cpp  store.hpp  store_filesystem.cpp  store_filesystem.hpp  vec2.cpp  vector2.cpp  zarr.cpp  zarr_array.cpp
src/storage/: directory_store.cpp  store.hpp
tests/: CMakeLists.txt  directory_store_test.cpp  file_system_test.cpp  math_tests.cpp  metadata_test.cpp  metadata_tests.cpp  store_filesystem_tests.cpp  store_test.cpp  vec2_test.cpp  vector2_tests.cpp  zarr_array_test.cpp  zarr_test.cpp  zarr_tests.cpp
tests/fixtures/simple_gzip_BE.zarr/: 0.0  3.0
tests/fixtures/simple_gzip_LE.zarr/: 0.0  3.0
tests/storage/: directory_store_test.cpp  storage_test.cpp
